# spot_ros

./: .gitignore
fast_lio_pkg/fast_lio/: .gitignore  CMakeLists.txt  CMakeLists_DP.txt
fast_lio_pkg/fast_lio/config/: ouster64.yaml
fast_lio_pkg/fast_lio/launch/: mapping_ouster64.launch
fast_lio_pkg/fast_lio/rviz_cfg/: loam_livox.rviz
fast_lio_pkg/fast_lio/src/: laserMapping.cpp  laserMapping_DP.cpp
octomap_server/src/: OctomapServer.cpp
ouster_sim/ouster_description/urdf/: example.urdf  (+1 more)
spot_config/launch/: bringup_collab.launch  gazebo.launch  gazebo_collab.launch  navigate.launch  spawn_robot.launch
spot_description/urdf/: riro_accessories.urdf.xacro  riro_spot.urdf.xacro  riro_spot_prev.urdf.xacro  spot.urdf  spot.urdf.xacro  spot_champ.urdf  spot_leg.urdf.xacro
spot_navigation/: CMakeLists.txt  package.xml
spot_navigation/config/move_base/: base_local_planner_holonomic_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  costmap_common_params_dynamic.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner.yaml
spot_navigation/launch/: slam_fastlio_spot.launch  visualize_slam_fastlio.launch
spot_navigation/launch/include/: fastlio_ouster64.launch  fastlio_ouster64_localization.launch  gmapping.launch  move_base.launch
spot_navigation/maps/: mymap.pgm  mymap.yaml  mymap2.pgm
spot_navigation/src/: add_point.cpp  clear_service_calling.py  collab_move_test.py  dynamic_object_filtering.py  goal_test.py  lidar_filtering.cpp  rbq_controller.cpp  robot_to_block.cpp  wait_spot_start.py
spot_riro/: CMakeLists.txt  package.xml
spot_riro/launch/: spot_gazebo.launch  spot_one_robot.launch
(+7 files in other folders)
