<?xml version="1.0"?>
<package format="2">
  <name>spot_navigation</name>
  <version>0.0.0</version>
  <description>
    This package includes launch files for slam and navigation
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>amcl</depend>
  <depend>move_base</depend>
  <depend>costmap_2d</depend>
  <depend>costmap_converter</depend>
  <depend>base_local_planner</depend>
  <depend>teb_local_planner</depend>
  <depend>map_server</depend>

</package>
